# BlackBox-CI-CD-script

./: .gitignore  LICENSE  Makefile  README.md  blackbox-scan.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
blackbox_ci/: blackbox_api.py  blackbox_ci.py  blackbox_operator.py  consts.py  errors.py  files.py  options.py  types.py  urls.py
docs/: swagger-api-v1.yaml
